--- a/week1/practice/style/index.css
+++ b/week1/practice/style/index.css
@@ -1,3 +1,18 @@
 .header-section {
-  color: red;
+  display: flex;
+  justify-content: center;
+  font-weight: 500;
+  color: lightblue;
+  height: 10rem;
+  font-size: 30px;
+}
+.header-section:hover {
+  background-color: aqua;
+  border-radius: 30%;
+  color: black;
+}
+.footer-section {
+  display: flex;
+  justify-content: center;
+  font-weight: 600;
 }
