fix : first_assignment 코드리뷰 반영 (주석제거)

--- a/week1/assignment/style/first_assignment.css
+++ b/week1/assignment/style/first_assignment.css
@@ -9,7 +9,6 @@ body {
 }
 .banner-img {
   position: relative;
-  /* 자신의 원래 위치기준 */
   width: 100%;
   height: 100vh;
 }
@@ -18,12 +17,12 @@ body {
 
 .nav-topbarSection {
   z-index: 10;
-  position: fixed; //뷰포트 기준, 스크롤 시에도 유지됨.
+  position: fixed;
   background-color: rgba(255, 255, 255, 0);
   width: 100%;
-  display: flex; /* 자식 요소들을 가로로 배치 */
-  justify-content: space-between; /* 왼쪽과 오른쪽을 양 끝에 배치 */
-  align-items: center; /* 세로 중앙 정렬 */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav-topbarLeft {
@@ -50,14 +49,14 @@ body {
   font-size: 15px;
   color: white;
   margin: 0 0 0 15px;
-  text-decoration: none; /* 밑줄 제거 */
+  text-decoration: none;
 }
 .nav-item a:hover {
-  color: black; /* 호버 시 색상 변경 */
+  color: black;
 }
 .nav-item i {
   color: white;
-  margin: 0 15px 0 0; /* 위, 오른쪽, 아래, 왼쪽 순서 */
+  margin: 0 15px 0 0;
 }
 .nav-item i:hover {
   color: black;
@@ -67,18 +66,18 @@ body {
 
 /* 바로가기 section */
 .link-section {
-  position: absolute; /*부모 혹은 body 기준(banner-section)*/
-  right: 20px; /* 배너의 오른쪽 끝에서 20px 떨어진 위치 */
-  bottom: 20px; /* 배너의 하단 끝에서 20px 떨어진 위치 */
-  z-index: 10; /* 배너 이미지보다 위에 위치시키기 위한 값 */
-  background-color: rgba(255, 255, 255, 0.8); /* 약간의 투명한 배경 */
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  z-index: 10;
+  background-color: rgba(255, 255, 255, 0.8);
   padding: 10px;
   border-radius: 5px;
 }
 
 .link-section a {
-  color: black; /* 링크 텍스트 색상 */
-  text-decoration: none; /* 링크의 밑줄 제거 */
+  color: black;
+  text-decoration: none;
 }
 .link-section i {
   size: 30px;
@@ -88,11 +87,11 @@ body {
 /* pharase section */
 .phrase-section {
   padding: 0px 10px;
-  position: absolute; /*부모 혹은 body 기준(banner-section)*/
+  position: absolute;
   z-index: 10;
   background-color: rgba(255, 255, 255, 0.8);
-  right: 20px; /* 배너의 오른쪽 끝에서 20px 떨어진 위치 */
-  bottom: 80px; /* 배너의 하단 끝에서 80px 떨어진 위치 */
+  right: 20px;
+  bottom: 80px;
   border-radius: 6%;
 }
 
@@ -104,17 +103,16 @@ body {
 /* photo 섹션 */
 .photo-container-section {
   overflow: hidden;
-  /* 넘치는 콘텐츠 숨김, 나머지는 스크롤될 때 보이게 함 */
+
   white-space: nowrap;
-  /* 모든 콘텐츠 한 줄로 유지 */
+
   margin-top: 50px;
 }
 
 .photo-carousel {
   display: inline-block;
-  /* 요소를 인라인 블록취급하는 속성 */
+
   animation: infiniteScroll 20s linear infinite;
-  /* 애니메이션 효과 설정 , 한 번 완전히 실행되는 시간 20s, 무한반복 */
 }
 
 .photo-container-section h3 {
@@ -134,7 +132,7 @@ body {
   width: 200px;
   height: auto;
   transition: transform 0.3s ease;
-  /* 이미지에 트랜스폼 효과가 적용될 때 0.3초 동안 부드럽게 발생함 */
+
   background-color: white;
   border-radius: 10%;
 }
@@ -147,17 +145,13 @@ body {
     transform: translateX(-50%);
   }
 }
-/* 처음에는 img1이 화면에 있고, img2는 오른쪽에 존재하게 됨.
-애니메이션이 진행되면서 img1이 왼쪽으로 50%만큼 이동하고, 그 뒤로 img2 등장
-화면에 img2가 완전히 보이게 되면 다시 img1이 보이면서 무한반복 */
 
 .photo-img1 img:hover,
 .photo-img2 img:hover {
-  transform: scale(1.1); /* 마우스 오버 시 이미지를 10% 확대 */
+  transform: scale(1.1);
 }
 .photo-carousel:hover {
   animation-play-state: paused;
-  /* 마우스 오버시 스크롤 잠시 정지 */
 }
 
 /* topPhoto 섹션 */
@@ -171,22 +165,18 @@ body {
   position: relative;
   overflow: hidden;
   padding: 0 40px;
-  /*양쪽 화살표를 배치하기 위한 좌우 padding 값 설정*/
 }
 
 .scroll-container {
   display: flex;
   overflow-x: auto;
-  -webkit-overflow-scrolling: touch;
   padding: 30px 0;
   scroll-behavior: smooth;
-  /* 자식요소들을 가로로 배치하고, 가로 스크롤을 자동으로 표시.
-  ios 기기 및 데스크탑에서의 부드러운 스크롤링 지원하는 속성과 상하 여백  */
 }
 
 .scroll-container img {
   flex: 0 0 auto;
-  /* 크기고정, 크기유지 */
+
   width: 200px;
   height: auto;
   margin-right: 10px;
@@ -204,7 +194,7 @@ body {
   border-radius: 10%;
   height: 200px;
   position: absolute;
-  /* 부모 요소인 legend-photo-section 기준 */
+
   top: 50%;
   transform: translateY(-50%);
   background-color: rgba(104, 98, 98, 0.5);
@@ -212,8 +202,8 @@ body {
   text-decoration: none;
   padding: 10px 15px;
   z-index: 10;
-  display: flex; /* Flexbox 사용 */
-  align-items: center; /* 세로 중앙 정렬 */
+  display: flex;
+  align-items: center;
 }
 
 .left-arrow {
